[package]
name = "actixwebtest"
version = "0.1.0"
authors = ["neo <neo.yun@cloudminds.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web-actors = "2.0.0"
awc = "1.0.1"
env_logger = "0.6"
bytes = "0.5.3"
actix-web = "2.0"
actix-rt = "1.0"
tera = "1.0"
once_cell = "1.4.0"
toml = "0.5"
log4rs = "0.13.0"
log = "0.4.8"
serde_json = "1.0.44"
serde = { version = "1.0.44", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["async-std-runtime"]